--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -4,7 +4,6 @@ html, body {
     padding: 0;
     margin: 0;
     font-family: 'Muli', sans-serif;
-
 }
 
 /** HEADER **/
@@ -24,34 +23,34 @@ html, body {
 
 #header-container {
     margin: 0;
-    padding: .7em 0;
+    padding: .7em 6em;
     display: flex;
     flex-wrap: nowrap;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
     background-color: rgb(183, 28, 28);
     color: #fff;
 }
 
 #header-title{
-    margin: auto;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
-#header-title > a{ 
+#header-title > a{
+   /* padding: 0 6em; */
     display: flex;
     flex-direction: column;
     text-decoration: none;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
 }
 #header-title > a > span {
     color: #fff;
     text-decoration: none;
     font-size: 1.2em;
-    
+
 }
 
 #header-title > div > a > h4:hover {
@@ -245,6 +244,17 @@ html, body {
 table {
     border-collapse: collapse;
     width: 100%;
+}
+
+td.new-file {
+    background-color: white;
+}
+td.new-file > a {
+    font-size: 1.2em;
+    color: #495057;
+    text-decoration: none;
+    font-family: 'Muli', sans-serif;
+    font-weight: bold;
 }
 
 th, td {
