--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -321,11 +321,14 @@ th {
     color: rgb(52, 58, 64);
 }
 
+.app-name {
+    border: none;
+}
+
 .edit-scripts-area {
     font-size: 1em;
     font-family: 'Muli', sans-serif;
     border: none;
-    height: 100%;
 
 }
 
